force-app/main/default/objects/Invoice__c/fields/Payable_total__c.field-meta.xml
<CustomField>
    <fullName>Payable_total__c</fullName>
    <formula>Order_Number__r.Payable_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>