force-app/main/default/objects/Invoice__c/fields/Total_before_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_before_GST__c</fullName>
    <formula>Order_Number__r.Total_before_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total before GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>