force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Payment_Mode__c</columns>
    <columns>Payable_total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>